refactored translations and added czech translation

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div class="language">
           <button class="btn btn__eng btn__lg">🇺🇸</button>
           <button class="btn btn__pt btn__lg">🇧🇷</button>
+          <button class="btn btn__cz btn__lg">🇨🇿</button>
         </div>
         <h1 class="header__h1 h1">Tic-Tac-Toe game</h1>
         <button class="two-player btn btn__mode">Two Players</button>
